# bfpe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: 可行性报告.md  项目计划.md
docs/plans/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
examples/: add.bf  hello.bf  hello_world.bf
runtime/: bf_abi.h  bf_export_runtime.c  bf_export_runtime.h  bf_io.c  bf_io.h  bf_stub.c  dllmain.c
runtime/vm/: bf_vm.c  bf_vm.h
src/cli/: CMakeLists.txt  build_cmd.cpp  build_cmd.hpp  bundle.cpp  bundle.hpp  cli.cpp  cli.hpp  exec_cmd.cpp  exec_cmd.hpp  main.cpp  manifest.cpp  manifest.hpp  msvc_env.cpp  msvc_env.hpp  paths.cpp  paths.hpp  process.cpp  process.hpp  run_cmd.cpp  run_cmd.hpp  verify_pe.cpp  verify_pe.hpp
src/codegen/: CMakeLists.txt  bf2asm.cpp  bf2asm.hpp  bf_interp.cpp  bf_interp.hpp  parse_sig.cpp  parse_sig.hpp  test_codegen.cpp
tools/: bfpe.py  exec_bf.py  gen_poetry_bf.py  generate_embedded_bundle.py  pack_portable.ps1  verify_pe.ps1
tools/archive/: README.md  bfpe.py  exec_bf.py  run_pe.py
tools/archive/codegen/: parse_sig.py
tools/codegen/: bf2asm.py  parse_sig.py  test_bf2asm.py  test_parse_sig.py
